    imagesetinterpolation()). (cmb)
  . Fixed bug #73279 (Integer overflow in gdImageScaleBilinearPalette()). (cmb)
  . Fixed bug #73280 (Stack Buffer Overflow in GD dynamicGetbuf). (cmb)

- phpdbg:
  . Properly allow for stdin input from a file. (Bob)
  . Add -s command line option / stdin command for reading script from stdin.
    (Bob)

- Session:
  . Fixed bug #73273 (session_unset() empties values from all variables in which
    is $_session stored). (Nikita)

- SOAP:
  . Fixed bug #73037 (SoapServer reports Bad Request when gzipped). (Anatol)
  . Fixed bug #73237 (Nested object in "any" element overwrites other fields).
    (Keith Smiley)

- Standard:
  . Fixed bug #73203 (passing additional_parameters causes mail to fail). (cmb)

13 Oct 2016 PHP 7.0.12

- Core:
  . Fixed bug #73025 (Heap Buffer Overflow in virtual_popen of
    zend_virtual_cwd.c). (cmb)
  . Fixed bug #72703 (Out of bounds global memory read in BF_crypt triggered by
    password_verify). (Anatol)
  . Fixed bug #73058 (crypt broken when salt is 'too' long). (Anatol)
  . Fixed bug #69579 (Invalid free in extension trait). (John Boehr)
  . Fixed bug #73156 (segfault on undefined function). (Dmitry)
  . Fixed bug #73163 (PHP hangs if error handler throws while accessing undef
    const in default value). (Nikita)
  . Fixed bug #73172 (parse error: Invalid numeric literal). (Nikita, Anatol)

- COM:
  . Fixed bug #73126 (Cannot pass parameter 1 by reference). (Anatol)

- Filter:
  . Fixed bug #72972 (Bad filter for the flags FILTER_FLAG_NO_RES_RANGE and
    FILTER_FLAG_NO_PRIV_RANGE). (julien)
  . Fixed bug #73054 (default option ignored when object passed to int filter).
    (cmb)

- GD:
  . Fixed bug #67325 (imagetruecolortopalette: white is duplicated in palette).
    (cmb)
  . Fixed bug #50194 (imagettftext broken on transparent background w/o
    alphablending). (cmb)
  . Fixed bug #73003 (Integer Overflow in gdImageWebpCtx of gd_webp.c). (trylab,
    cmb)